使用无配置文件方式，全注解。

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -45,3 +45,21 @@ maxPoolPreparedStatementPerConnectionSize = 20
 #MySQL_MyISAM = org.hibernate.dialect.MySQLMyISAMDialect
 #Oracle = org.hibernate.dialect.OracleDialect
 #SQL_Server = org.hibernate.dialect.SQLServerDialect
+
+
+
+##########文件上传配置##########
+#字符编码
+defaultEncoding = UTF-8
+#最大上传大小
+maxUploadSize = 1024
+#内存中最大的大小
+maxInMemorySize = 1024
+#单个文件最大大小
+maxUploadSizePerFile = 1024
+#上传路径
+uploadTempDir = temp/jasmine
+#推迟文件解析，以便获取文件大小异常
+resolveLazily =true
+#
+servletContext =???
