--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
       <version>${springVersion}</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>${springVersion}</version>
+    </dependency>
     <!-- spring web + spring MVC-->
     <dependency>
       <groupId>org.springframework</groupId>
